# mosek.rust

./: .gitignore  .gitmodules  Cargo.toml  Jenkinsfile  LICENSE  README  README.md  build.rs
doc/: Makefile  make.bat
doc/source/: api.rst  conf.py  consts.rst  index.rst
examples/: README.md  acc1.rs  acc2.rs  alan.rs  blas_lapack.rs  callback.rs  ceo1.rs  ceo1_deprecated.rs  common.rs  concurrent1.rs  cqo1.rs  djc1.rs  feasrepairex1.rs  gp1.rs  helloworld.rs  lo1.rs  lo1_model.rs  lo2.rs  logistic.rs  lownerjohn_ellipsoid.rs  mico1.rs  milo1.rs  mioinitsol.rs  opt_server_async.rs  opt_server_sync.rs  parallel.rs  parameters.rs  pinfeas.rs  portfolio.rs  portfolio_1_basic.rs  portfolio_2_frontier.rs  portfolio_3_impact.rs  portfolio_4_transcost.rs  portfolio_5_card.rs  portfolio_6_factor.rs  pow1.rs  qcqo1.rs  qo1.rs  reoptimization.rs  response.rs  (+13 more)
src/: affine_conic_api.rs  conic_solver_mosek.rs  lib.rs  mosek.rs  namegen.rs
src/model/: mod.rs
tests/: mosekcli.rs  test.rs  testmosek.rs  testmosek_raw.rs
workspace_script/: Jenkinsfile
