[package]
name    = "mosek"
version = "10.0.2"
authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
description = "Rust API for MOSEK optimization tools"
homepage = "https://mosek.com"
readme = "README.md"
documentation = "https://docs.rs/mosek"
repository = "https://github.com/MOSEK/Mosek.rust"
build = "build.rs"
license = "BSD-4-Clause"

[dependencies]
libc = "0.2"
itertools = "0.10"

#[build-dependencies]
#curl = "0.4"
