[package]
name    = "mosek"
version = "10.2.1"
authors = [ "Ulf Worsøe <ulf.worsoe@mosek.com>" ]
description = "Rust API for MOSEK optimization tools"
homepage = "https://mosek.com"
readme = "README.md"
documentation = "https://docs.rs/mosek"
repository = "https://github.com/MOSEK/Mosek.rust"
build = "build.rs"
license = "BSD-4-Clause"
rust-version = "1.59"
keywords = ["mosek","optimization","conic_optimization","linear_optimization","integer_optimization"]
categories = ["api-bindings","mathematics","science"]

[dependencies]
libc = "0.2"
itertools = "0.10"

[[bin]]
name = "testmosek-raw"
test = false
path = "tests/testmosek_raw.rs"

[[bin]]
name = "mosekcli"
test = false
path = "tests/mosekcli.rs"
